added checkbox on GlobalProperties

--- a/app/views/database/newDatabase.html
+++ b/app/views/database/newDatabase.html
@@ -7,7 +7,7 @@
         <h3>New Database </h3>
       </div>
       <div class="modal-body edge">
-        <form id="signin" name="newDB" class="form-horiontal" novalidate="">
+        <form id="signin" name="newDB" class="form-horizontal" novalidate="">
           <fieldset>
             <div class="form-group">
               <label class="control-label col-md-2">Name</label>
@@ -17,8 +17,6 @@
                        placeholder="Database name" focus="true" />
               </div>
             </div>
-
-
             <div class="form-group">
               <label class="control-label col-md-2">Server User</label>
 
