--- a/app/views/server/general/configuration.html
+++ b/app/views/server/general/configuration.html
@@ -1,5 +1,12 @@
 <div class="col-md-12">
-  <div class="widget">
+
+
+  <div ng-show="!agentActive">
+    <div class="col-md-12 studio-well-tips">
+      <h4 ng-bind-html=" 'agent.notFound' | translate:links "></h4>
+    </div>
+  </div>
+  <div ng-show="agentActive" class="widget">
 
     <div class="widget-body">
       <textarea ui-codemirror="editorOptions" ng-model="configuration"></textarea>
