--- a/app/views/server/general/config.html
+++ b/app/views/server/general/config.html
@@ -34,7 +34,6 @@
   </div>
 
 
-
   <div class="row row-space">
     <div class="col-md-12">
       <div class="table-responsive">
@@ -54,10 +53,21 @@
           <tr ng-repeat="props in displayedGlobalProperties | orderBy:'+key' | filter:query">
             <td>{{ props.key }}</td>
             <td>{{ props.description }}</td>
-            <td>{{ props.defaultValue }}</td>
-            <td ng-if="!props.canChange">{{ props.value }}</td>
-            <td ng-if="props.canChange"><input class="form-control" type="text" ng-change="changeGlobal(props)"
-                                               ng-model="props.value">
+            <td>
+              <input type="checkbox" disabled class="form-control" ng-show="isBoolean(props.defaultValue)"
+                     ng-model="props.defaultValue">
+              <span ng-hide="isBoolean(props.defaultValue)"> {{ props.defaultValue }}</span>
+            </td>
+            <td ng-if="!props.canChange">
+
+              <input type="checkbox" disabled class="form-control" ng-show="isBoolean(props.value)"
+                     ng-model="props.value">
+              <span ng-hide="isBoolean(props.value)"> {{ props.value }}</span>
+            </td>
+            <td ng-if="props.canChange">
+
+              <input class="form-control" type=" {{ getType(props.value)}}" ng-change="changeGlobal(props)"
+                     ng-model="props.value">
             </td>
           </tr>
           </tbody>
