--- a/app/views/server/general/overview.html
+++ b/app/views/server/general/overview.html
@@ -1,5 +1,11 @@
 <div class="col-md-12" ng-controller="SinglePollerController">
-  <div class="panel panel-default">
+
+  <div ng-show="!agentActive">
+    <div class="col-md-12 studio-well-tips">
+      <h4 ng-bind-html=" 'agent.notFound' | translate:links "></h4>
+    </div>
+  </div>
+  <div class="panel panel-default" ng-show="agentActive">
     <div class="panel-heading">
       Server {{server.name}} CRUD Operations
     </div>
