--- a/app/views/server/general/plugins.html
+++ b/app/views/server/general/plugins.html
@@ -1,10 +1,16 @@
 <div ng-controller="PluginsController">
 
+
+  <div class="col-md-12" ng-show="!agentActive">
+    <div class="col-md-12 studio-well-tips">
+      <h4 ng-bind-html=" 'agent.notFound' | translate:links "></h4>
+    </div>
+  </div>
   <div class="row row-space">
 
   </div>
 
-  <div class="row row-space">
+  <div ng-show="agentActive" class="row row-space">
 
     <tabset clazz="clazz">
       <tab ng-repeat="plugin in plugins" context="plugin" title="{{plugin.name}}"
@@ -12,7 +18,7 @@
     </tabset>
   </div>
 
-  <div class="row row-space">
+  <div ng-show="agentActive" class="row row-space">
     <div class="col-md-6 col-md-offset-3">
       <div class="pull-right">
         <button class="btn btn-sm btn-primary" ng-click="saveConfiguration()"><i
