--- a/app/views/server/general/warnings.html
+++ b/app/views/server/general/warnings.html
@@ -1,5 +1,11 @@
-<div ng-controller="WarningsController">
-  <div class="col-md-12">
+<div class="col-md-12" ng-controller="WarningsController">
+
+  <div ng-show="!agentActive">
+    <div class="col-md-12 studio-well-tips">
+      <h4 ng-bind-html=" 'agent.notFound' | translate:links "></h4>
+    </div>
+  </div>
+  <div ng-show="agentActive" class="col-md-12">
     <table class="table">
       <thead>
       <tr>
