Implemented Prjhub#5843,Prjhub#5842

--- a/orientechnologies-website/.tmp/styles/icons.css
+++ b/orientechnologies-website/.tmp/styles/icons.css
@@ -52,3 +52,10 @@
 .fa-referenced:before {
   content: "\f097";
 }
+
+.fa-slaStarted:before {
+  content: "\f017";
+}
+.fa-slaStopped:before {
+  content: "\f017";
+}
