--- a/orientechnologies-website/src/main/webapp/views/issues/newIssue.html
+++ b/orientechnologies-website/src/main/webapp/views/issues/newIssue.html
@@ -10,7 +10,7 @@
             <div class="form-group">
               <input type="text" class="form-control" required placeholder="Title" ng-model="issue.title">
             </div>
-            <div class="checkbox" ng-show="(isMember || isClient || isSupport)">
+            <div class="checkbox" ng-show="(isMember  || isSupport)">
               <label>
                 <input type="checkbox" placeholder="Private Issue"
                        ng-model="issue.confidential">
