--- a/app/views/database/auditing/config.html
+++ b/app/views/database/auditing/config.html
@@ -33,6 +33,19 @@
   </div>
   <hr/>
   <div class="row">
+    <form class="form-inline">
+      <div class="form-group">
+        <label for="createClass">Create Class </label>
+        <input id="createClass" type="checkbox" ng-model="config.auditClassName" class="form-control"/>
+      </div>
+      <div class="form-group">
+        <label for="dropClass">Drop Class </label>
+        <input id="dropClass" type="checkbox" ng-model="config.auditClassName" class="form-control"/>
+      </div>
+    </form>
+
+  </div>
+  <div class="row">
     <div class="col-md-12">
       <table class="table">
         <thead>
