--- a/app/views/database/browse.html
+++ b/app/views/database/browse.html
@@ -162,13 +162,14 @@
         <div class="col-md-6 col-xs-12">
 
             <div class="btn-group pull-right">
-                <button class="btn btn-sm"
+                <button class="btn btn-sm btn-default"
                         data-placement="left"
                         data-title="{{'browse.showBookmark' | translate}}"
                         data-animation="am-fade-and-scale"
                         bs-tooltip
                         ng-click="toggleBookmarks()">
-                    <i class="fa fa-star"> Bookmarks</i>
+                    <i class="fa fa-star"> </i>
+                    Bookmarks
                 </button>
             </div>
         </div>
