--- a/app/views/database/graph/graph.html
+++ b/app/views/database/graph/graph.html
@@ -21,41 +21,46 @@
             <div class="btn-group">
               <button href="javascript:void(0)" class="btn btn-primary btn-sm"
                       ng-click="saveConfig()"><i
-                class="fa fa-save"> Save Configuration</i>
+                class="fa fa-save"> </i>
+                Save Configuration
 
               </button>
             </div>
             <div class="btn-group">
-              <button href="javascript:void(0)" class="btn btn-default btn-sm" ng-click="addNode()"><i
-                class="fa fa-plus-circle"> Add Vertex</i>
+              <button href="javascript:void(0)" class="btn btn-sm btn-default" ng-click="addNode()"><i
+                class="fa fa-plus-circle"> </i>
+                Add Vertex
 
               </button>
             </div>
 
 
             <div class="btn-group" ng-hide="fullscreen">
-              <button href="javascript:void(0)" class="btn btn-default btn-sm"
+              <button href="javascript:void(0)" class="btn  btn-sm btn-default"
                       ng-click="fullscreen = true"><i
-                class="fa fa-expand"> Fullscreen</i>
+                class="fa fa-expand"> </i>
+                Fullscreen
 
               </button>
             </div>
             <div class="btn-group" ng-show="fullscreen">
-              <button href="javascript:void(0)" class="btn btn-default btn-sm"
+              <button href="javascript:void(0)" class="btn  btn-sm btn-default"
                       ng-click="fullscreen = false"><i
-                class="fa fa-compress"> Exit Fullscreen</i>
+                class="fa fa-compress"> </i>
+                Exit Fullscreen
 
               </button>
             </div>
             <div class="btn-group">
-              <button href="javascript:void(0)" class="btn btn-default btn-sm"
+              <button href="javascript:void(0)" class="btn  btn-sm btn-default"
                       ng-click="clear()"><i
-                class="fa fa-trash-o"> Clear Canvas</i>
+                class="fa fa-trash-o"> </i>
+                Clear Canvas
 
               </button>
             </div>
             <div class="btn-group">
-              <button type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown">
+              <button type="button" class="btn  btn-sm btn-default dropdown-toggle" data-toggle="dropdown">
                 More <span class="caret"></span>
               </button>
               <ul class="dropdown-menu pull-right" role="menu">
