--- a/app/views/database/security/roles.html
+++ b/app/views/database/security/roles.html
@@ -13,9 +13,10 @@
                         <button type="submit" class="btn" ng-click="">
                           <i class="fa fa-search"></i>
                         </button>
-                            <button type="submit"  ng-click="addRole()"
+                            <button type="submit" ng-click="addRole()"
                                     class="btn btn-success" ng-click="">
-                              <i class="fa fa-plus-circle"> Add Role</i>
+                              <i class="fa fa-plus-circle"> </i>
+                              Add Role
                             </button>
                             </span>
           </div>
@@ -35,9 +36,9 @@
       </div>
       <div class="col-md-6 col-xs-4">
         <div class="btn-group pull-right">
-          <button class="btn btn-sm btn-success"  ng-click="addRule()"><i
-            class="fa fa-plus-circle"> Add
-            Rule</i></button>
+          <button class="btn btn-sm btn-success" ng-click="addRule()"><i
+            class="fa fa-plus-circle"> </i>Add Rule
+          </button>
         </div>
       </div>
     </div>
