--- a/app/views/login.html
+++ b/app/views/login.html
@@ -18,9 +18,8 @@
                                    data-animation="am-fade-and-scale" data-container="body"
                                    bs-tooltip>
                                     <i class="fa fa-plus-circle"></i>
-
+                                    New DB
                                 </a>
-
                                 <a class="btn btn-warning btn-sm" ng-click="importPublic()"
                                    data-title="{{ 'login.importDb' | translate }}"
                                    data-animation="am-fade-and-scale" data-container="body"
