--- a/app/views/server/distributed/overview.html
+++ b/app/views/server/distributed/overview.html
@@ -5,8 +5,6 @@
       <div class="panel-heading">
         <b> Cluster Health</b></div>
       <div class="panel-body">
-
-
         <div class="row">
           <div class="col-md-3">
             <div id="cpu-gauge" c3-gauge value="cpu" height="height"></div>
@@ -41,6 +39,13 @@
         <hr>
         <div class="row">
           <div class="col-md-6">
+            <b>Active Nodes:</b> {{servers.length}}
+          </div>
+          <div class="col-md-6">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
             <b>Status:</b> <span ng-class="getStatusLabel(server.status)">{{ status }}</span>
 
             <a ng-show="!agent" href="javascript:void(0)" tabindex="1"
@@ -50,7 +55,7 @@
             </a>
           </div>
           <div class="col-md-6">
-            <b>Ops/Sec:</b> {{operations}}</span>
+            <b>Ops/Sec:</b> {{operations}}
           </div>
         </div>
 
@@ -75,9 +80,7 @@
   </div>
 
   <div class="col-md-6">
-
     <div class="panel panel-default">
-
       <div class="panel-heading">
         <b> Cluster CRUD Operations</b>
       </div>
