--- a/app/views/server/general/log.html
+++ b/app/views/server/general/log.html
@@ -31,7 +31,7 @@
                  ng-model="selectedSearch">
         </div>
 
-        <button type="submit" ng-click="search()" class="btn btn-sm">Search</button>
+        <button type="submit" ng-click="search()" class="btn btn-sm btn-default">Search</button>
         <div class="row">
 
           <div class="col-md-3">
