--- a/app/views/server/stats/auditing/log.html
+++ b/app/views/server/stats/auditing/log.html
@@ -87,13 +87,16 @@
               <label>Limit</label>
               <input type="number" class="form-control" ng-model="query.limit">
             </div>
-
             <div class="col-md-3">
               <div class="btn-group">
-                <button class="btn btn-sm" ng-click="resetFilter()"><i class="fa fa-eraser"> Clear Filter</i></button>
+                <button class="btn btn-sm btn-default" ng-click="resetFilter()"><i class="fa fa-eraser"> </i>
+                  Clear
+                </button>
               </div>
               <div class="btn-group">
-                <button class="btn btn-sm" type="submit"><i class="fa fa-search"> Search</i></button>
+                <button class="btn btn-sm btn-default" type="submit"><i class="fa fa-search"> </i>
+                  Search
+                </button>
               </div>
             </div>
           </div>
