--- a/app/views/database/auditing/log.html
+++ b/app/views/database/auditing/log.html
@@ -83,10 +83,13 @@
           <div class="col-md-3">
             <br/>
             <div class="btn-group">
-              <button class="btn" ng-click="resetFilter()"><i class="fa fa-eraser"> Clear Filter</i></button>
+              <button class="btn btn-sm btn-default" ng-click="resetFilter()"><i class="fa fa-eraser"> </i>
+                Clear Filter
+              </button>
             </div>
             <div class="btn-group">
-              <button class="btn" type="submit"><i class="fa fa-search"> Search</i></button>
+              <button class="btn btn-sm btn-default"  type="submit"><i class="fa fa-search"> </i>
+                Search</button>
             </div>
           </div>
         </div>
