--- a/app/views/database/config/structure.html
+++ b/app/views/database/config/structure.html
@@ -1,5 +1,5 @@
-<div ng-controller="StructureController" class="container-fluid">
-    <div class="row-fluid">
+<div ng-controller="StructureController" class="col-md-12">
+    <div class="row">
         <p>
             <b><a
                     href="http://www.orientdb.com/docs/{{version}}/orientdb.wiki/Clusters.html" target="_blank">Clusters</a>
@@ -11,7 +11,7 @@
             is volatile.
         </p>
     </div>
-    <div class="row-fluid">
+    <div class="row">
         <table class="table table-striped table-bordered table-hover table-condensed">
             <thead>
             <tr>
@@ -29,7 +29,7 @@
             </tr>
             </thead>
             <tbody>
-            <tr ng-repeat="cluster in clusters">
+            <tr ng-repeat="cluster in clusters | orderBy:'name'">
                 <td>{{ cluster.id }}</td>
                 <td>{{ cluster.name }}</td>
                 <td>{{ cluster.records }}</td>
