--- a/app/views/database/security.html
+++ b/app/views/database/security.html
@@ -17,7 +17,7 @@
         </div>
       </div>
     </div>
-    <div class="card">
+    <div class="card security-card">
       <div class="row">
         <div class="col-md-12">
           <ul class="nav nav-tabs">
