--- a/app/views/server/distributed/singleDB.html
+++ b/app/views/server/distributed/singleDB.html
@@ -3,132 +3,127 @@
 
   <div class="row row-space">
 
-    <div class="col-md-6">
-      <form class="form-horizontal well">
-        <fieldset>
-          <legend>Configuration</legend>
-          <div class="form-group">
+    <div class="col-md-12">
+      <div id="menu" class="panel panel-default list-group">
+        <div class="panel-heading">
+          Configuration
+        </div>
+        <div class="panel-body">
 
-            <label class="control-label col-md-2">Write Quorum</label>
-
-            <div class="col-md-10">
-              <input type="number" class="form-control"
-                     ng-model="config.writeQuorum">
-            </div>
-          </div>
-          <div class="form-group">
-            <label class="control-label col-md-2">Read Quorum</label>
-
-            <div class="col-md-10">
-              <input type="number" class="form-control"
-                     ng-model="config.readQuorum">
-            </div>
-          </div>
-          <div class="form-group">
-            <div class="col-md-10 col-md-offset-2">
-              <div class="checkbox">
-                <label>
-                  <input type="checkbox" ng-model="config.autoDeploy"
-                         ng-change="change('autoDeploy')"> Auto Deploy
-                </label>
+          <div class="col-md-6">
+            <form class="form-horizontal">
+              <div class="form-group">
+                <label class="control-label col-md-2">Write Quorum</label>
+                <div class="col-md-10">
+                  <ui-select tagging  ng-model="config.writeQuorum" theme="selectize" title="Choose write quorum">
+                    <ui-select-match placeholder="Select write quorum...">{{$select.selected}}</ui-select-match>
+                    <ui-select-choices repeat="q in quorums | filter: $select.search">
+                      <div ng-bind-html="q | highlight: $select.search"></div>
+                    </ui-select-choices>
+                  </ui-select>
+                  </input>
+                </div>
               </div>
-            </div>
-          </div>
-          <div class="form-group">
-            <div class="col-md-10 col-md-offset-2">
-              <div class="checkbox">
-                <label>
-                  <input type="checkbox" disabled="true"
-                         ng-model="config.hotAlignment"> Hot Alignment
-                </label>
-              </div>
-            </div>
-          </div>
-          <div class="form-group">
-            <div class="col-md-10 col-md-offset-2">
-              <div class="checkbox">
-                <label>
-                  <input type="checkbox"
-                         ng-model="config.readYourWrites">
-                  Read Your Writes
-                </label>
-              </div>
-            </div>
-          </div>
-          <div class="form-group">
-            <div class="col-md-10 col-md-offset-2">
-              <div class="checkbox">
-                <label>
-                  <input type="checkbox"
-                         ng-model="config.failureAvailableNodesLessQuorum">
-                  Failure Available Nodes Less Quorum
-                </label>
-              </div>
-            </div>
-          </div>
-          <div class="form-group">
-            <label class="control-label col-md-2">Server Roles</label>
+              <div class="form-group">
+                <label class="control-label col-md-2">Read Quorum</label>
 
-            <div class="col-md-10">
-              <table class=" table table-striped  table-hover table-condensed ">
-                <thead>
-                <tr>
-                  <th>Server</th>
-                  <th>Role</th>
-                </tr>
+                <div class="col-md-10">
+                  <input type="number" class="form-control"
+                         ng-model="config.readQuorum">
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-md-10 col-md-offset-2">
+                  <div class="checkbox">
+                    <label>
+                      <input type="checkbox" ng-model="config.autoDeploy"
+                             ng-change="change('autoDeploy')"> Auto Deploy
+                    </label>
+                  </div>
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="col-md-10 col-md-offset-2">
+                  <div class="checkbox">
+                    <label>
+                      <input type="checkbox"
+                             ng-model="config.readYourWrites">
+                      Read Your Writes
+                    </label>
+                  </div>
+                </div>
+              </div>
 
-                </thead>
-                <tbody>
-                <tr ng-repeat="s in servers">
-
-                  <td>
-                    {{s.name}}
-                  </td>
-                  <td>
-                    <select class="form-control" ng-model="calculatedRoles[s.name]" ng-change="changeRole(role)"
-                            ng-options="role for role in roles"></select>
-                  </td>
-                </tr>
-                </tbody>
-              </table>
-            </div>
+            </form>
           </div>
-        </fieldset>
-        <div class="btn-toolbar">
-          <div class="btn-group pull-right">
-            <button class="btn btn-sm btn-primary" ng-click="saveConfig()"><i class="fa fa-save"></i> Save Config
-            </button>
+          <div class="col-md-6">
+            <form class="form-horizontal">
+              <div class="form-group">
+                <label class="control-label col-md-2">Server Roles</label>
+                <div class="col-md-10">
+                  <table class=" table table-striped  table-hover table-condensed ">
+                    <thead>
+                    <tr>
+                      <th>Server</th>
+                      <th>Role</th>
+                    </tr>
+
+                    </thead>
+                    <tbody>
+                    <tr ng-repeat="s in servers">
+
+                      <td>
+                        {{s.name}}
+                      </td>
+                      <td>
+                        <select class="form-control" ng-model="calculatedRoles[s.name]"
+                                ng-options="role for role in roles"></select>
+                      </td>
+                    </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+              <div class="btn-toolbar">
+                <div class="btn-group pull-right">
+                  <button class="btn btn-sm btn-primary" ng-click="saveConfig()"><i class="fa fa-save"></i> Save Config
+                  </button>
+                </div>
+              </div>
+            </form>
           </div>
         </div>
-      </form>
-    </div>
-    <div class="col-md-6">
-
+      </div>
     </div>
   </div>
   <div class="row">
     <div class="col-md-12">
-      <table class=" table table-striped  table-hover table-condensed ">
-        <thead>
-        <tr>
-          <th>#</th>
-          <th ng-repeat="s in servers">{{s.name}}</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr ng-repeat="(key,value) in config.clusters">
-          <td>
-            {{key}}
+      <div class="panel panel-default list-group">
+        <div class="panel-heading">
+          Clusters Distribution <span class="pull-right"> <b>LEGEND: </b> X = Owner, o = Copy </span>
+        </div>
+        <table class=" table table-striped  table-hover table-condensed ">
+          <thead>
+          <tr>
+            <th>#</th>
+            <th ng-repeat="s in servers">{{s.name}}</th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr ng-repeat="(key,value) in config.clusters">
+            <td>
+              {{key}}
 
-          </td>
-          <td ng-repeat="s in servers">
-            <i class="fa fa-check" ng-show="isClusterInNode(key,s.name)"></i>
-          </td>
-        </tr>
-        </tbody>
-      </table>
+            </td>
+            <td ng-repeat="s in servers">
+              <!--<i class="fa fa-check" ng-show="isClusterInNode(key,s.name)"></i>-->
+              <span> {{ getOwnership(key,s.name) }}</span>
+            </td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
-
 </div>
 
