--- a/app/views/server/stats/auditing.html
+++ b/app/views/server/stats/auditing.html
@@ -1,5 +1,4 @@
-<div class="row" ng-controller="AuditingController">
-
+<div ng-controller="AuditingController">
 
   <div ng-show="!agentActive">
     <div class="col-md-12 studio-well-tips">
@@ -15,20 +14,25 @@
             <select id="serverOnline" ng-model="server" class="form-control " ng-options="s.name for s in servers"
                     data-placeholder="Pick a Server"></select>
           </div>
-          <div class="form-group">
+          <div  class="form-group">
             <label>Database </label>
             <select id="databasesOnline" ng-model="db" class="form-control" ng-options="db for db in server.databases"
                     data-placeholder="Pick a Server"></select>
+          </div>
+
+          <div class="form-group">
+            <label>Enabled </label>
+            <input type="checkbox" ng-model="enabled" ng-change="enableAuditing()">
           </div>
         </form>
       </div>
     </div>
   </div>
 
-  <div class="col-md-12" ng-show="agentActive">
+  <div class="col-md-12" ng-show="agentActive && enabled">
     <div class="row row-space">
       <div class="col-md-12">
-        <tabset>
+        <tabset clazz="clazz">
           <tab title="Auditing Log"
                template-url="views/server/stats/auditing/log.html">
           </tab>
