--- a/app/views/server/stats/auditing/config.html
+++ b/app/views/server/stats/auditing/config.html
@@ -1,10 +1,4 @@
 <div class="container-fluid">
-  <div class="row">
-    <div class="col-md-12">
-
-    </div>
-  </div>
-
   <div class="row studio-well">
     <div class="col-md-6">
       <form class="form-inline">
@@ -25,7 +19,48 @@
       <div class="page-header">
         <div class="row">
           <div class="col-md-10">
-            <h4>Class Auditing</h4>
+            <h3>Schema Auditing</h3>
+          </div>
+          <div class="col-md-2">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-2">
+      <form class="form-inline">
+        <div class="form-group">
+          <input id="createClass" type="checkbox" ng-model="config.onGlobalCreateClass" class="form-control"/>
+          <label for="createClass">Create Class </label>
+        </div>
+        <div class="form-group form-group-sm">
+                <textarea class="form-control" placeholder="Message" ng-disabled="!config.onGlobalCreateClass"
+                          ng-model="config.onCreateClassMessage"></textarea>
+        </div>
+      </form>
+    </div>
+    <div class="col-md-2">
+      <form class="form-inline">
+        <div class="form-group">
+          <input id="dropClass" type="checkbox" ng-model="config.onGlobalDropClass" class="form-control"/>
+          <label for="dropClass">Drop Class </label>
+        </div>
+
+        <div class="form-group form-group-sm">
+                <textarea class="form-control" placeholder="Message" ng-disabled="!config.onGlobalDropClass"
+                          ng-model="config.onDropClassMessage"></textarea>
+        </div>
+      </form>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+      <div class="page-header">
+        <div class="row">
+          <div class="col-md-10">
+            <h3>Class Auditing</h3>
           </div>
           <div class="col-md-2">
             <div class="btn-group pull-right">
@@ -37,6 +72,7 @@
       </div>
     </div>
   </div>
+
   <div class="row">
     <div class="col-md-12">
       <table class="table">
@@ -135,7 +171,7 @@
       <div class="page-header">
         <div class="row">
           <div class="col-md-10">
-            <h4>Command Auditing</h4>
+            <h3>Command Auditing</h3>
           </div>
           <div class="col-md-2">
             <div class="btn-group pull-right">
