--- a/app/views/database/query.html
+++ b/app/views/database/query.html
@@ -44,53 +44,121 @@
   </div>
   <div class="query-body">
     <div ng-show="current == 'table'">
-      <table ng-table="tableParams" show-filter="false"
-             class="table  table-striped table-bordered table-hover table-condensed result-table">
-        <thead>
-        <tr class="subHeader">
-          <th class="text-center" ng-if="value.span > 0" colspan="{{value.span}}"
-              ng-repeat="(key, value) in item.subHeaders">
-            {{value.name}}
-          </th>
-        </tr>
-        <tr class="queryfield-header">
-          <th ng-class="isDivider($index,header)" class="sortable"
-              ng-click="sort(header)"
-              ng-repeat="header in item.headers">
-            <div>
-              {{header | nograph}}
-            </div>
-          </th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr ng-repeat="result in $data track by $index">
-          <td ng-repeat="header in item.headers">
-            <div ng-if="isRid(result[header])">
-              <a href="{{linkRid(result[header])}}">
-                {{result[header]}} </a>
-            </div>
-            <div ng-if="isClass(header)">
-              <a href="{{linkClass(result[header])}}">
-                <span class='label label-primary' ng-style='getColorClass()'> {{result[header]}} </span>
-              </a>
-            </div>
-            <div ng-if="isRids(result[header])">
-              <div ridrender="">
+      <!--<table ng-table="tableParams" show-filter="false"-->
+      <!--class="table  table-striped table-bordered table-hover table-condensed result-table">-->
+      <!--<thead>-->
+      <!--<tr class="subHeader">-->
+      <!--<th class="text-center" ng-if="value.span > 0" colspan="{{value.span}}"-->
+      <!--ng-repeat="(key, value) in item.subHeaders">-->
+      <!--{{value.name}}-->
+      <!--</th>-->
+      <!--</tr>-->
+      <!--<tr class="queryfield-header">-->
+      <!--<th ng-class="isDivider($index,header)" class="sortable"-->
+      <!--ng-click="sort(header)"-->
+      <!--ng-repeat="header in item.headers">-->
+      <!--<div>-->
+      <!--{{header | nograph}}-->
+      <!--</div>-->
+      <!--</th>-->
+      <!--</tr>-->
+      <!--</thead>-->
+      <!--<tbody>-->
+      <!--<tr ng-repeat="result in $data track by $index">-->
+      <!--<td ng-repeat="header in item.headers">-->
+      <!--<div ng-if="isRid(result[header])">-->
+      <!--<a href="{{linkRid(result[header])}}">-->
+      <!--{{result[header]}} </a>-->
+      <!--</div>-->
+      <!--<div ng-if="isClass(header)">-->
+      <!--<a href="{{linkClass(result[header])}}">-->
+      <!--<span class='label label-primary' ng-style='getColorClass()'> {{result[header]}} </span>-->
+      <!--</a>-->
+      <!--</div>-->
+      <!--<div ng-if="isRids(result[header])">-->
+      <!--&lt;!&ndash;<div ridrender="">&ndash;&gt;-->
+      <!--&lt;!&ndash;</div>&ndash;&gt;-->
+      <!--{{result['@rid']}}-->
+      <!--<ridrender2 value="result[header]">-->
+      <!--{{result['@rid']}}-->
+      <!--</ridrender2>-->
+      <!--</div>-->
+      <!--<div ng-if="isBinary(result,header)">-->
+      <!--[binary-data]-->
+      <!--</div>-->
+      <!--<div ng-if="otherwise(result,result[header],header)">-->
+      <!--{{result[header]}}-->
+      <!--</div>-->
 
+      <!--</td>-->
+      <!--</tr>-->
+      <!--</tbody>-->
+      <!--</table>-->
+
+      <div class="table-responsive">
+        <table st-table="displayedRecords" st-safe-src="item.resultTotal"
+               class="table table-striped table-bordered table-hover table-condensed pointer table-schema">
+          <thead>
+          <tr class="subHeader">
+            <th class="text-center" ng-if="value.span > 0" colspan="{{value.span}}"
+                ng-repeat="(key, value) in item.subHeaders">
+              {{value.name}}
+            </th>
+          </tr>
+          <tr class="queryfield-header">
+            <th ng-class="isDivider($index,header)" class="sortable"
+                ng-click="sort(header)"
+                ng-repeat="header in item.headers">
+              <div>
+                {{header | nograph}}
               </div>
-            </div>
-            <div ng-if="isBinary(result,header)">
-              [binary-data]
-            </div>
-            <div ng-if="otherwise(result,result[header],header)">
-              {{result[header]}}
-            </div>
+            </th>
+          </tr>
+          <tbody>
+          <tr ng-repeat="result in displayedRecords ">
+            <td ng-repeat="header in item.headers">
+              <div ng-if="isRid(result[header])">
+                <a href="{{linkRid(result[header])}}">
+                  {{result[header]}} </a>
+              </div>
+              <div ng-if="isClass(header)">
+                <a href="{{linkClass(result[header])}}">
+                  <span class='label label-primary' ng-style='getColorClass()'> {{result[header]}} </span>
+                </a>
+              </div>
+              <div ng-if="isRids(result[header])">
+                <!--<div ridrender="">-->
+                <!--</div>-->
+                <ridrender2 value="result[header]">
+                </ridrender2>
+              </div>
+              <div ng-if="isBinary(result,header)">
+                [binary-data]
+              </div>
+              <div ng-if="otherwise(result,result[header],header)">
+                {{result[header]}}
+              </div>
+            </td>
+          </tr>
+          </tbody>
+          <tfoot>
+          <tr>
+            <td colspan="{{item.headers.length}}" class="text-center">
+              <div st-pagination="" st-items-by-page="itemByPage" st-displayed-pages="7"></div>
+            </td>
 
-          </td>
-        </tr>
-        </tbody>
-      </table>
+          </tr>
+          <tr>
+            <td colspan="{{item.headers.length}}">
+              <div class=" btn-group pull-right ng-scope">
+                <button ng-repeat="count in counts" ng-click="changeItemByPage(count)" ng-class="{ 'active' : count === itemByPage}" type="button"
+                        class="btn btn-default ng-scope"><span>{{count}}</span></button>
+              </div>
+            </td>
+          </tr>
+          </tfoot>
+        </table>
+      </div>
     </div>
 
     <div ng-show="current == 'raw'" class="jsonView">
